Adding FCM dependencies

--- a/app/src/main/res/layout/fragment_add_reminder.xml
+++ b/app/src/main/res/layout/fragment_add_reminder.xml
@@ -93,19 +93,32 @@
             app:layout_constraintStart_toStartOf="@+id/et_add_reminder_date"
             app:layout_constraintTop_toBottomOf="@+id/et_add_reminder_date" />
 
-        <Button
-            android:id="@+id/btn_add_reminder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+
+        <RelativeLayout
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/et_add_reminder_time"
             android:layout_marginTop="64dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="ADD"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_add_reminder_time" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+
+                android:id="@+id/btn_add_reminder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ADD"
+           />
+            <Button
+                android:layout_below="@+id/btn_add_reminder"
+                android:id="@+id/btn_save_reminder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:visibility="gone"
+                />
+
+        </RelativeLayout>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
