--- a/app/src/main/res/layout/fragment_add_new_note.xml
+++ b/app/src/main/res/layout/fragment_add_new_note.xml
@@ -27,13 +27,43 @@
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
 
-     <com.google.android.material.button.MaterialButton
-         android:layout_marginTop="32dp"
-         android:layout_gravity="center"
-         android:id="@+id/btn_add"
-         android:text="add"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content" />
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:orientation="vertical">
+
+         <RelativeLayout
+             android:gravity="center"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content">
+
+             <com.google.android.material.button.MaterialButton
+                 android:layout_marginTop="32dp"
+                 android:layout_gravity="center"
+                 android:id="@+id/btn_add_new_note"
+                 android:text="add"
+
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content" />
+
+             <com.google.android.material.button.MaterialButton
+                 android:gravity="center"
+                 android:layout_marginTop="32dp"
+                 android:layout_gravity="center"
+                 android:layout_below="@+id/btn_add_new_note"
+                 android:id="@+id/btn_save_note"
+                 android:text="Save"
+                 android:visibility="gone"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content" />
+
+
+
+
+         </RelativeLayout>
+
+     </LinearLayout>
+
 
  </LinearLayout>
 
