--- a/app/src/main/res/layout/layout_checklist_list_item.xml
+++ b/app/src/main/res/layout/layout_checklist_list_item.xml
@@ -17,20 +17,44 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="10">
 
-            <CheckBox
-                android:layout_margin="4dp"
-                android:id="@+id/cb_item_checklist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
 
-            <TextView
-                android:id="@+id/tv_item_checklist_title"
-                android:layout_margin="4dp"
-                android:text="Sample"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_weight="9"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:layout_margin="4dp"
+                    android:id="@+id/cb_item_checklist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"/>
+
+                <TextView
+                    android:id="@+id/tv_item_checklist_title"
+                    android:layout_margin="4dp"
+                    android:text="Sample"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:id="@+id/btn_delete_cell_checklist"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                app:srcCompat="@drawable/ic_delete_accent_24dp"/>
+
+
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
