--- a/app/src/main/res/layout/layout_notes_list_item.xml
+++ b/app/src/main/res/layout/layout_notes_list_item.xml
@@ -15,26 +15,48 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
 
-            <TextView
-                android:layout_margin="8dp"
-                android:id="@+id/tv_item_notes_title"
-                android:text="Notes Title"
-                android:textStyle="bold"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_margin="8dp"
+                    android:id="@+id/tv_item_notes_title"
+                    android:text="Notes Title"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                   />
+
+
+
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
 
             <TextView
                 android:layout_margin="8dp"
                 android:id="@+id/tv_item_notes_description"
                 android:maxLines="1"
+                android:layout_weight="9"
                 android:text="jshdakhfasd kjahskjfhasjkfd kjhaskjdfhask kjhasjfhkas"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content" />
+            <ImageView
 
+                android:layout_weight="1"
+                android:id="@+id/btn_delete_cell_notes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_delete_accent_24dp"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     </com.google.android.material.card.MaterialCardView>
 
