--- a/app/src/main/res/layout/layout_reminder_list_item.xml
+++ b/app/src/main/res/layout/layout_reminder_list_item.xml
@@ -37,29 +37,54 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="10">
 
-                <TextView
-                    android:layout_marginLeft="8dp"
-                    android:text="Date : "
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/tv_item_reminder_date"
+                <LinearLayout
+                    android:layout_weight="4.5"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_marginLeft="8dp"
+                        android:text="Date : "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/tv_item_reminder_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="03/03/2019"/>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_weight="4.5"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_marginLeft="8dp"
+                        android:text="Time : "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/tv_item_reminder_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="6:45 PM"/>
+
+                </LinearLayout>
+
+
+
+                <ImageView
+                    android:layout_weight="1"
+                    android:id="@+id/btn_delete_cell_reminder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="03/03/2019"/>
-
-                <TextView
-                    android:layout_marginLeft="8dp"
-                    android:text="Time : "
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/tv_item_reminder_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="6:45 PM"/>
+                    app:srcCompat="@drawable/ic_delete_accent_24dp"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
