--- a/app/src/main/res/menu/optionsmenu.xml
+++ b/app/src/main/res/menu/optionsmenu.xml
@@ -1,9 +1,17 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/signout"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Signout" />
 
+    <item
+        android:id="@+id/action_refresh"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_group_add_white_24dp"
+        android:title="Refresh"/>
+
+        />
 
 </menu>
