--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -17,6 +17,14 @@
         <action
             android:id="@+id/toAddNewNoteFragment"
             app:destination="@id/addNewNoteFragment" />
+        <argument
+            android:name="position"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="from"
+            app:argType="string"
+            android:defaultValue="temp"/>
     </fragment>
 
 
@@ -33,8 +41,18 @@
         <action
             android:id="@+id/action_reminderFragment_to_addNewReminderFragment"
             app:destination="@id/addNewReminderFragment"
-            app:launchSingleTop="false" />
+            />
+        <argument
+            android:name="position"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="from"
+            app:argType="string"
+            android:defaultValue="temp"/>
     </fragment>
+
+
 
     <fragment
         android:id="@+id/addNewNoteFragment"
