--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="colorRed">#f44336</color>
     <color name="colorYellow">#ffeb3b</color>
     <color name="colorGreen">#8bc34a</color>
+    <color name="colorwhite">#ffffff</color>
+
+
+
 </resources>
