--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     tools:context=".LoginActivity">
 
 
+    <!-- child linear layout which holds all the views -->
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -27,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Sign In"
+            android:text="@string/sign_in"
             android:textColor="@color/colorAccent"
             android:textSize="24sp" />
 
@@ -43,7 +44,7 @@
                 android:maxLines="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter User Email" />
+                android:hint="@string/enter_user_email" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Enter Password" />
+                android:hint="@string/enter_password" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,7 +70,7 @@
             android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Login" />
+            android:text="@string/login" />
 
 
         <com.google.android.material.button.MaterialButton
@@ -77,7 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Register"
+            android:text="@string/register"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:textColor="@color/colorAccent" />
 
@@ -88,7 +89,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:text="Forget Password? "
+            android:text="@string/forget_password"
             android:textColor="@color/colorAccent" />
 
         <com.google.android.material.button.MaterialButton
@@ -96,9 +97,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Resend Confirmation Email"
+            android:text="@string/resend_confirmation_email"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:textColor="@color/colorAccent" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
