--- a/app/src/main/res/layout/activity_on_board.xml
+++ b/app/src/main/res/layout/activity_on_board.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".OnBoardActivity">
 
+    <!--For View Pager-->
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
@@ -15,6 +16,7 @@
 
     </androidx.viewpager.widget.ViewPager>
 
+    <!--for dots layout -->
     <LinearLayout
         android:id="@+id/dotsLayout"
         android:layout_width="match_parent"
@@ -23,9 +25,9 @@
         android:layout_weight="10"
         android:orientation="horizontal">
 
-
     </LinearLayout>
 
+    <!--linear layout for buttons at the bottom-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,21 +39,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Sign Up"/>
+            android:text="@string/sign_up"/>
 
         <TextView
             android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Already a user?"/>
+            android:text="@string/already_a_user"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_sigin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Sign In"/>
+            android:text="@string/sign_in"/>
 
     </LinearLayout>
+
 </LinearLayout>
