--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -7,34 +7,31 @@
     android:layout_height="match_parent"
     tools:context=".TabActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <!--toolbar setup-->
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="0dp">
+        android:layout_height="?attr/actionBarSize"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="4dp"
+        android:elevation="4dp">
 
-
-        <com.google.android.material.card.MaterialCardView
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_margin="8dp"
-            app:cardCornerRadius="4dp"
-            android:elevation="4dp">
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:titleTextAppearance="@style/AppTheme.AppBarOverlay"
-                android:background="@color/colorPrimary">
+                <androidx.appcompat.widget.Toolbar
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:titleTextAppearance="@style/AppTheme.AppBarOverlay"
+                    android:background="@color/colorPrimary"/>
 
-            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
 
-        </com.google.android.material.card.MaterialCardView>
-
-
-    </com.google.android.material.appbar.AppBarLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 
     <include layout="@layout/content_tab_activity" />
