--- a/app/src/main/res/layout/dialog_resend_verification.xml
+++ b/app/src/main/res/layout/dialog_resend_verification.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Resend Verification Email"
+        android:text="@string/resend_confirmation_email"
         android:textSize="21sp"
         android:id="@+id/dialogTitle"/>
 
@@ -23,7 +23,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Email id"
+            android:hint="@string/enter_user_email"
             android:id="@+id/confirm_email"
             android:inputType="textEmailAddress"
             />
@@ -39,7 +39,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Password"
+            android:hint="@string/enter_password"
             android:id="@+id/confirm_password"
             android:inputType="textEmailAddress"
             />
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="@color/colorAccent"
-            android:text="Cancle"
+            android:text="@string/cancle"
             android:layout_marginTop="30dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
@@ -67,12 +67,13 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="@color/colorAccent"
-            android:text="Confirm"
+            android:text="@string/confirm"
             android:layout_alignParentRight="true"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="10dp"
-            android:id="@+id/dialogConfirm"/>
+            android:id="@+id/dialogConfirm"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 
