--- a/app/src/main/res/layout/dialog_resetpassword.xml
+++ b/app/src/main/res/layout/dialog_resetpassword.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset Password"
+        android:text="@string/reset_password"
         android:textSize="21sp"
         android:id="@+id/dialogTitle"/>
 
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/dialogTitle"
-        android:hint="Enter Email id"
+        android:hint="@string/enter_user_email"
         android:id="@+id/email_password_reset"
         android:inputType="textEmailAddress"
         android:layout_marginTop="15dp"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
-        android:text="Confirm"
+        android:text="@string/confirm"
         android:layout_alignParentRight="true"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
