--- a/app/src/main/res/layout/fragment_add_new_note.xml
+++ b/app/src/main/res/layout/fragment_add_new_note.xml
@@ -13,7 +13,7 @@
      <com.google.android.material.textfield.TextInputEditText
          android:layout_margin="16dp"
          android:id="@+id/et_add_title"
-         android:hint="Add Title"
+         android:hint="@string/add_title"
          android:inputType="text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
@@ -22,15 +22,11 @@
      <com.google.android.material.textfield.TextInputEditText
          android:layout_margin="16dp"
          android:id="@+id/et_add_desc"
-         android:hint="Add Description"
+         android:hint="@string/add_description"
          android:inputType="textMultiLine"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
 
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:orientation="vertical">
 
          <RelativeLayout
              android:gravity="center"
@@ -41,7 +37,7 @@
                  android:layout_marginTop="32dp"
                  android:layout_gravity="center"
                  android:id="@+id/btn_add_new_note"
-                 android:text="add"
+                 android:text="@string/add"
 
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
@@ -52,17 +48,13 @@
                  android:layout_gravity="center"
                  android:layout_below="@+id/btn_add_new_note"
                  android:id="@+id/btn_save_note"
-                 android:text="Save"
+                 android:text="@string/save"
                  android:visibility="gone"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
-
-
-
-
          </RelativeLayout>
 
-     </LinearLayout>
+
 
 
  </LinearLayout>
