--- a/app/src/main/res/layout/layout_reminder_list_item.xml
+++ b/app/src/main/res/layout/layout_reminder_list_item.xml
@@ -22,7 +22,7 @@
             <TextView
                 android:layout_margin="8dp"
                 android:id="@+id/tv_item_reminder_title"
-                android:text="Notes Title"
+                android:text="@string/notes_title"
                 android:textStyle="bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -30,7 +30,7 @@
             <TextView
                 android:layout_margin="8dp"
                 android:id="@+id/tv_item_reminder_description"
-                android:text="jshdakhfasd kjahskjfhasjkfd kjhaskjdfhask kjhasjfhkas"
+                android:text="@string/sample_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -54,7 +54,7 @@
                         android:id="@+id/tv_item_reminder_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="03/03/2019"/>
+                        />
 
 
                 </LinearLayout>
@@ -73,7 +73,7 @@
                         android:id="@+id/tv_item_reminder_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="6:45 PM"/>
+                        />
 
                 </LinearLayout>
 
