--- a/app/src/main/res/layout/onboardpage_layout.xml
+++ b/app/src/main/res/layout/onboardpage_layout.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:gravity="center"
-                android:text="Organize"
+                android:text="@string/organize"
                 android:textColor="#ffffff"
                 android:textSize="24dp"
                 android:textStyle="bold" />
@@ -56,7 +56,6 @@
                 android:layout_marginTop="16dp"
                 android:gravity="center"
                 android:inputType="textMultiLine"
-                android:text="jskdhfjkhsdf sjhdfjhadf ljhjhjkhjksdf kjhjkhkjhakjsdf  jhasjfh jhjakhsdfjh jahsjkdhf jhf asjkdhf akjsdhfjk fj."
                 android:textColor="#e0f2f1" />
 
 
