--- a/app/src/main/res/layout/fragment_colab.xml
+++ b/app/src/main/res/layout/fragment_colab.xml
@@ -20,7 +20,7 @@
         </androidx.recyclerview.widget.RecyclerView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_add_notes"
+            android:id="@+id/fab_add_project"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
