--- a/app/src/main/res/layout/fragment_add_new_task.xml
+++ b/app/src/main/res/layout/fragment_add_new_task.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:layout_marginBottom="?attr/actionBarSize"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,93 +8,114 @@
     android:orientation="vertical"
     tools:context=".fragments.AddNewTaskFragment">
 
-
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/add_title"
-        android:id="@+id/et_add_task_title" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/add_description"
-        android:id="@+id/et_add_task_desc" />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="10">
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_margin="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/add_title"
+            android:id="@+id/et_add_task_title" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_margin="4dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:hint="Start date"
-            android:id="@+id/et_task_start_date"/>
-
-
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_margin="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:hint="End date"
-            android:id="@+id/et_task_end_date"/>
-
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:weightSum="10"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:layout_weight="1"
-            android:layout_marginLeft="8dp"
-            android:textColor="@color/colorAccent"
-            android:text="Assign task to: "
-            android:textSize="15sp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_weight="7"
-            android:id="@+id/assign_recyclerview"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-
-        </androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="wrap_content"
+            android:hint="@string/add_description"
+            android:id="@+id/et_add_task_desc" />
 
         <LinearLayout
-            android:gravity="center"
-            android:layout_weight="2"
+            android:orientation="horizontal"
+            android:layout_margin="16dp"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content"
+            android:weightSum="10">
 
-            <com.google.android.material.button.MaterialButton
-                android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:id="@+id/btn_add_task"
-                android:text="Add Task"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_margin="4dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:hint="Start date"
+                android:id="@+id/et_task_start_date"/>
+
+
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_margin="4dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:hint="End date"
+                android:id="@+id/et_task_end_date"/>
 
         </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="16dp"
+            android:layout_weight="1"
+            android:text="Assign task to: "
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="7">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/assign_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+
+                <TextView
+                    android:id="@+id/empty_task_list_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:gravity="center"
+                    android:text="Add Members so you can assign the tasks to them."
+                    android:textColor="@color/colorAccent" />
+
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:gravity="center">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_add_task"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Add Task" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
